core extension docs